@@ -1,3 +1,8 @@
+2005-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mm-util.el (mm-find-buffer-file-coding-system): Don't examine
+	charset of tar files.
+
 2005-06-04  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* gnus-art.el (article-update-date-lapsed): Use `save-match-data'.
